FindBugs: mvn findbugs:gui found about 400 bugs and was able to knock out half of them. To test